end of tailwind

--- a/17. Tailwind CSS/index.html
+++ b/17. Tailwind CSS/index.html
@@ -8,9 +8,25 @@
 </head>
 <body>
 
-    <div class="box" >One</div>
-    <div class="bg-purple-600 m-4" >Two</div>
-    <div class="bg-purple-700 m-4" >Three</div>
+   <div class="mt-20 flex flex-wrap mx-52 border-black border-2 rounded">
+
+    <!-- head -->
+    <div class="bg-linear-to-t from-sky-500 to-indigo-500 h-24 text-white text-lg font-semibold flex justify-center items-center w-full">
+        News you can Trust.
+    </div>
+
+    <!-- //content -->
+    <div class="text-center mt-6 w-full">
+        <h3 class="font-bold"> Stay up to date wit the Latest!</h3>
+        <p>Subscribe to our newsletter for the latest news straight into your inbox</p>
+
+        <form class="flex flex-wrap" >      
+             <input type="text" placeholder="you@example.com" class="rounded-md bg-slate-200 w-full h-9 mt-2 p-2 text-center">
+        <button class="bg-blue-500 rounded-full w-full py-2 mx-52 text-white">Subscribe</button>
+        </form>
+ 
+    </div>
+   </div>
 
 </body>
 </html>
